--- a/ДЗ 5.ipynb
+++ b/ДЗ 5.ipynb
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,46 +337,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "best_params: {'C': 0.1}\n",
-      "best_score: 0.8007884831034492\n",
-      "best_score_test: 0.7917008278390781\n",
-      "best_params: {'C': 0.1}\n",
-      "best_score: 0.8026184584438703\n",
-      "best_score_test: 0.7939326555187374\n",
-      "best_params: {'C': 0.1}\n",
-      "best_score: 0.8089989417288033\n",
-      "best_score_test: 0.798565912082505\n",
-      "best_params: {'C': 1}\n",
-      "best_score: 0.8080513926508821\n",
-      "best_score_test: 0.806268864729855\n",
-      "best_params: {'C': 10}\n",
-      "best_score: 0.8114935002570904\n",
-      "best_score_test: 0.8010352668350531\n",
-      "[0.8007884831034492, 0.8026184584438703, 0.8089989417288033, 0.8080513926508821, 0.8114935002570904]\n"
-     ]
+     "data": {
+      "text/plain": "LogisticRegression(C=0.001, class_weight='balanced', random_state=5)",
+      "text/html": "<style>#sk-container-id-14 {color: black;background-color: white;}#sk-container-id-14 pre{padding: 0;}#sk-container-id-14 div.sk-toggleable {background-color: white;}#sk-container-id-14 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-14 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-14 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-14 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-14 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-14 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-14 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-14 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-14 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-14 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-14 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-14 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-14 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-14 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-14 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-14 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-14 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-14 div.sk-item {position: relative;z-index: 1;}#sk-container-id-14 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-14 div.sk-item::before, #sk-container-id-14 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-14 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-14 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-14 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-14 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-14 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-14 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-14 div.sk-label-container {text-align: center;}#sk-container-id-14 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-14 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-14\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(C=0.001, class_weight=&#x27;balanced&#x27;, random_state=5)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-16\" type=\"checkbox\" checked><label for=\"sk-estimator-id-16\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(C=0.001, class_weight=&#x27;balanced&#x27;, random_state=5)</pre></div></div></div></div></div>"
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "### Ваш код должен быть здесь ###\n",
-    "lr_grid_search = GridSearchCV(lr, param_grid=parameters, scoring='roc_auc')\n",
-    "ls_best_score = list()\n",
-    "for train_index, test_index in skf.split(X, y):\n",
-    "    X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
-    "    y_train, y_test = y[train_index], y[test_index]\n",
-    "    lr_grid_search.fit(X_train, y_train)\n",
-    "    ls_best_score.append(lr_grid_search.best_score_)\n",
-    "    print(f'best_params:', lr_grid_search.best_params_)\n",
-    "    print(f'best_score:', lr_grid_search.best_score_)\n",
-    "    print(f'best_score_test:', lr_grid_search.score(X_test, y_test))\n",
-    "\n",
-    "print(ls_best_score)"
+    "lr_grid_search = GridSearchCV(lr, param_grid=parameters, scoring='roc_auc', cv=skf)\n",
+    "lr_grid_search.fit(X, y)\n",
+    "lr_grid_search.best_estimator_"
    ]
   },
   {
@@ -389,21 +367,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "0.004030236580903997"
+      "text/plain": "0.008137559189742445"
      },
-     "execution_count": 27,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "### Ваш код должен быть здесь ###\n",
-    "np.std(ls_best_score)"
+    "lr_grid_search.cv_results_['std_test_score'][1]"
    ]
   },
   {
@@ -654,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -708,8 +686,6 @@
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
       "  n_iter_i = _check_optimize_result(\n",
-      "/home/Nikolay/PycharmProjects/ODSml/venv/lib/python3.10/site-packages/sklearn/linear_model/_linear_loss.py:99: RuntimeWarning: overflow encountered in add\n",
-      "  raw_prediction = X @ weights + intercept\n",
       "/home/Nikolay/PycharmProjects/ODSml/venv/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:444: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
@@ -734,10 +710,6 @@
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
       "  n_iter_i = _check_optimize_result(\n",
-      "/home/Nikolay/PycharmProjects/ODSml/venv/lib/python3.10/site-packages/sklearn/linear_model/_linear_loss.py:99: RuntimeWarning: overflow encountered in add\n",
-      "  raw_prediction = X @ weights + intercept\n",
-      "/home/Nikolay/PycharmProjects/ODSml/venv/lib/python3.10/site-packages/sklearn/linear_model/_linear_loss.py:99: RuntimeWarning: overflow encountered in matmul\n",
-      "  raw_prediction = X @ weights + intercept\n",
       "/home/Nikolay/PycharmProjects/ODSml/venv/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:444: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
@@ -992,16 +964,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'max_samples': 0.9, 'max_features': 4, 'base_estimator__C': 1}\n",
-      "0.8152586422856485\n"
+      "{'max_samples': 0.9, 'max_features': 2, 'base_estimator__C': 100}\n",
+      "0.8154582750201183\n"
      ]
     }
    ],
    "source": [
     "### Ваш код должен быть здесь ###\n",
-    "base_est = LogisticRegression(random_state=5, class_weight=\"balanced\", C=0.001)\n",
+    "base_est = LogisticRegression(class_weight=\"balanced\")\n",
     "bag_cls = BaggingClassifier(random_state=42, base_estimator=base_est, n_estimators=100)\n",
-    "bag_rs_CV= RandomizedSearchCV(bag_cls, n_jobs=-1, n_iter=20, param_distributions=parameters, cv=5, random_state=1)\n",
+    "bag_rs_CV= RandomizedSearchCV(bag_cls, n_jobs=-1, n_iter=20, param_distributions=parameters, cv=skf, random_state=1)\n",
     "bag_rs_CV.fit(X, y)\n",
     "print(bag_rs_CV.best_params_)\n",
     "print(bag_rs_CV.best_score_)"
